# api/routes/aircraftRoute.js
@@ -2,9 +2,10 @@ const { Router } = require("express")
 const aircraftRouter = Router()
 
 const { auth } = require("../../middlewares/auth")
-const { createAircraft, getAircraft, deleteAircraft, updateAircraft } = require("../controllers/aircraftConroler")
+const { createAircraft, getAircrafts, deleteAircraft, updateAircraft, getAircraftById } = require("../controllers/aircraftConroler")
 
-aircraftRouter.route("/").get(auth, getAircraft)
+aircraftRouter.route("/").get(auth, getAircrafts)
+aircraftRouter.route("/:aircraft_id").get(auth, getAircraftById)
 aircraftRouter.route("/").post(auth, createAircraft)
 aircraftRouter.route("/").patch(auth, updateAircraft)
 aircraftRouter.route("/:aircraft_id").delete(auth, deleteAircraft)
