# api/routes/transactionRoute.js
@@ -2,11 +2,12 @@ const { Router } = require("express")
 const transactionRouter = Router()
 
 const { auth } = require("../../middlewares/auth")
-const { createTransaction, getTransaction, updateTransaction, deleteTransaction } = require("../controllers/transactionController")
+const { createTransaction, getTransactions, updateTransaction, deleteTransaction, getTransactionById } = require("../controllers/transactionController")
 
-transactionRouter.route("/").get(auth, getTransaction)
+transactionRouter.route("/").get(auth, getTransactions)
+transactionRouter.route("/:transaction_id").get(auth, getTransactionById)
 transactionRouter.route("/").post(auth, createTransaction)
-transactionRouter.route("/").patch(auth, updateTransaction)
+transactionRouter.route("/:transaction_id").patch(auth, updateTransaction)
 transactionRouter.route("/:transaction_id").delete(auth, deleteTransaction)
 
 
